fix: fixed too large spacings and horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 h1 {
